Remove unified asset installer

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,5 @@
     "description": "Responsive modern template for phpDocumentor for Twig",
     "keywords": ["documentation", "template", "phpdoc"],
     "homepage": "http://www.phpdoc.org",
-    "license": "MIT",
-    "require": {
-        "phpdocumentor/unified-asset-installer": "1.*"
-    }
+    "license": "MIT"
 }
