--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
     "homepage": "http://www.phpdoc.org",
     "license": "MIT",
     "require": {
-        "phpdocumentor/unified-asset-installer": "1.*"
+        "phpdocumentor/unified-asset-installer": "1.1"
     }
 }
